# somewhere-like

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
app/: AppHeader.tsx  SearchCity.tsx  api.ts  layout.tsx  page.css  page.tsx
backend/: Cargo.toml
backend/src/: api.rs  climate_search.rs  intern.rs  lib.rs  main.rs  main_cli.rs  main_http.rs  search.rs
common/: Cargo.toml
common/src/: cities.rs  city.rs  city_csv.rs  csv_friendly_test.rs  lib.rs  util.rs  utils.rs
data-in/: README.md
derive_csv_friendly/: Cargo.toml
derive_csv_friendly/src/: lib.rs
preprocessing/: Cargo.toml
preprocessing/src/: geonames.rs  lib.rs  main.rs  terra_climate.rs
test/: api.mts  testHttp.mts  testHttp.ts  testLocal.mjs
