[package]
name = "backend"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "cli"
path = "src/main_cli.rs"

[[bin]]
name = "http"
path = "src/main_http.rs"

[dependencies]
common = { path = "../common" }
dashmap = "6.1.0"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-util = { version = "0.1.15", features = ["full"] }
once_cell = "1.21.3"
rand = "0.9.1"
rayon = "1.10.0"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thread_local = "1.1.9"
tokio = { version = "1.46.1", features = ["full"] }

[dev-dependencies]
strsim = "0.11.1"
